// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`canonicalDomainForm canonicalDomainForm(""AlgebraicNumber"") 1`] = `"AlgebraicNumber"`;

exports[`canonicalDomainForm canonicalDomainForm(""ComplexNumber"") 1`] = `"ComplexNumber"`;

exports[`canonicalDomainForm canonicalDomainForm(""Integer"") 1`] = `"Integer"`;

exports[`canonicalDomainForm canonicalDomainForm(""Number"") 1`] = `"Number"`;

exports[`canonicalDomainForm canonicalDomainForm(""RationalNumber"") 1`] = `"RationalNumber"`;

exports[`canonicalDomainForm canonicalDomainForm(""RealNumber"") 1`] = `"RealNumber"`;

exports[`canonicalDomainForm canonicalDomainForm("["And", [Array], [Array]]") 1`] = `
Array [
  "And",
  Array [
    "Greater",
    0,
  ],
  Array [
    "Lesser",
    5,
  ],
]
`;

exports[`canonicalDomainForm canonicalDomainForm("["Interval", -Infinity, Infinity]") 1`] = `
Array [
  "Interval",
  -Infinity,
  Infinity,
]
`;

exports[`canonicalDomainForm canonicalDomainForm("["Interval", 0, 0]") 1`] = `
Array [
  "Interval",
  0,
  0,
]
`;

exports[`canonicalDomainForm canonicalDomainForm("["Interval", 0, 5]") 1`] = `
Array [
  "Interval",
  0,
  5,
]
`;

exports[`canonicalDomainForm canonicalDomainForm("["Interval", 0, Infinity]") 1`] = `
Array [
  "Interval",
  0,
  Infinity,
]
`;

exports[`canonicalDomainForm canonicalDomainForm("["Range", -Infinity, Infinity]") 1`] = `
Array [
  "Range",
  -Infinity,
  Infinity,
]
`;

exports[`canonicalDomainForm canonicalDomainForm("["Range", 0, 0]") 1`] = `
Array [
  "Range",
  0,
  0,
]
`;

exports[`canonicalDomainForm canonicalDomainForm("["Range", 1, 1]") 1`] = `
Array [
  "Range",
  1,
  1,
]
`;

exports[`canonicalDomainForm canonicalDomainForm("["Range", 1, 5]") 1`] = `
Array [
  "Range",
  1,
  5,
]
`;

exports[`canonicalDomainForm canonicalDomainForm("["Union", [Array], [Array]]") 1`] = `
Array [
  "Union",
  Array [
    "Range",
    1,
    5,
  ],
  Array [
    "Range",
    5,
    Infinity,
  ],
]
`;

exports[`canonicalDomainForm canonicalDomainForm("0") 1`] = `0`;

exports[`canonicalDomainForm canonicalDomainForm("5") 1`] = `5`;
